charts/operators-installer/_integration-tests/privateRegistry/templates/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: registry
  name: registry
  namespace: registry
spec:
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: registry
  sessionAffinity: None
  type: ClusterIP
